--- a/betaad.html
+++ b/betaad.html
@@ -90,10 +90,11 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      display: flex;
+      display: none;
       align-items: center;
       gap: 20px;
     }
+    .nav-center.show { display: flex; }
     .nav-link {
       display: flex;
       align-items: center;
@@ -121,7 +122,7 @@
       transform: translateY(-2px);
     }
     .logout-btn {
-      display: none;
+      display: flex;
       align-items: center;
       gap: 8px;
       padding: 10px 20px;
@@ -139,7 +140,6 @@
       transform: translateY(-2px);
       box-shadow: 0 4px 15px rgba(224, 122, 95, 0.3);
     }
-    .logout-btn.show { display: flex; }
     .nav-right { display: flex; align-items: center; gap: 16px; }
     .nav-theme-toggle {
       display: flex;
@@ -569,6 +569,12 @@
       overflow: hidden;
       border-top: 1px solid rgba(212, 163, 115, 0.2);
       z-index: 1;
+      transition: all 0.5s ease;
+    }
+    body.light-mode footer {
+      background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
+      color: var(--dark);
+      border-top: 1px solid rgba(212, 163, 115, 0.3);
     }
     footer::before {
       content: '';
@@ -581,6 +587,7 @@
       background: var(--gradient-warm);
       box-shadow: var(--neon-glow);
     }
+    body.light-mode footer::before { box-shadow: none; }
     .footer-logo {
       font-family: 'Playfair Display', serif;
       font-size: 2rem;
@@ -590,18 +597,13 @@
       -webkit-text-fill-color: transparent;
       background-clip: text;
     }
-    .footer-text { opacity: 0.6; font-size: 0.9rem; }
-    .snowflake {
-      position: fixed;
-      top: -20px;
-      color: white;
-      user-select: none;
-      pointer-events: none;
-      z-index: 9999;
-      animation: fall linear infinite;
-      opacity: 0.6;
-      filter: drop-shadow(0 0 8px rgba(255, 255, 255, 0.6));
+    body.light-mode .footer-logo {
+      background: linear-gradient(135deg, #1a1a1a 0%, #d4a373 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
     }
+    .footer-text { opacity: 0.6; font-size: 0.9rem; }
     .particle {
       position: fixed;
       width: 4px;
@@ -613,7 +615,6 @@
       opacity: 0.3;
       animation: float-particle 15s ease-in-out infinite;
     }
-    @keyframes fall { to { transform: translateY(100vh) rotate(360deg); } }
     @keyframes pulse-glow { 0%, 100% { filter: drop-shadow(0 0 20px rgba(212, 163, 115, 0.5)); } 50% { filter: drop-shadow(0 0 30px rgba(212, 163, 115, 0.8)); } }
     @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
     @keyframes float-particle {
@@ -636,13 +637,11 @@
         border-bottom: 1px solid rgba(212, 163, 115, 0.2);
         flex-direction: column;
         gap: 12px;
-        display: none;
       }
       body.light-mode .nav-center {
         background: rgba(255, 255, 255, 0.95);
         border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       }
-      .nav-center.show { display: flex; }
       .hero { height: 100svh; }
       .hero-transition { height: 40vh; }
       main { padding: 40px 16px; }
@@ -658,7 +657,7 @@
         animation-iteration-count: 1 !important;
         transition-duration: 0.01ms !important;
       }
-      .snowflake, .particle { display: none; }
+      .particle { display: none; }
     }
   </style>
 </head>
@@ -667,11 +666,11 @@
   <nav class="nav-menu">
     <a href__="index.html" class="nav-logo">Super Pekárna</a>
     <div class="nav-center" id="navCenter">
-      <a href__="index.html" class="nav-link">
+      <a href__="index.html" class="nav-link" onclick="window.location.href__='index.html'; return false;">
         <i data-lucide="arrow-left" style="width: 18px; height: 18px;"></i>
         Zpět na hlavní stránku
       </a>
-      <button id="logoutBtn" class="logout-btn" onclick="logout()">
+      <button class="logout-btn" onclick="logout()">
         <i data-lucide="log-out" style="width: 18px; height: 18px;"></i>
         Odhlásit se
       </button>
@@ -730,7 +729,7 @@
   </footer>
   <script>
     lucide.createIcons();
-    const PASSWORD = "MojeHeslo123";
+    var PASSWORD = "MojeHeslo123";
     function setTheme(theme) {
       if (theme === 'light') {
         document.body.classList.add('light-mode');
@@ -744,7 +743,7 @@
         localStorage.setItem('theme', 'dark');
       }
     }
-    const savedTheme = localStorage.getItem('theme') || 'dark';
+    var savedTheme = localStorage.getItem('theme') || 'dark';
     if (savedTheme === 'light') {
       setTheme('light');
     }
@@ -774,14 +773,12 @@
     function showIdeasSection() {
       document.getElementById("loginSection").style.display = "none";
       document.getElementById("ideasSection").classList.add("show");
-      document.getElementById("logoutBtn").classList.add("show");
       document.getElementById("navCenter").classList.add("show");
     }
     function logout() {
       localStorage.removeItem("adminLogged");
       document.getElementById("loginSection").style.display = "block";
       document.getElementById("ideasSection").classList.remove("show");
-      document.getElementById("logoutBtn").classList.remove("show");
       document.getElementById("navCenter").classList.remove("show");
       document.getElementById("password").value = "";
       document.getElementById("errorMsg").classList.remove("show");
@@ -871,17 +868,6 @@
         lucide.createIcons();
       }
     }
-    function createSnowflake() {
-      var snowflake = document.createElement('div');
-      snowflake.className = 'snowflake';
-      snowflake.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="2" x2="22" y1="12" y2="12"/><line x1="12" x2="12" y1="2" y2="22"/><path d="m20 16-4-4 4-4"/><path d="m4 8 4 4-4 4"/><path d="m16 4-4 4-4-4"/><path d="m8 20 4-4 4 4"/></svg>';
-      snowflake.style.left = Math.random() * 100 + '%';
-      snowflake.style.fontSize = (Math.random() * 1.2 + 0.6) + 'rem';
-      snowflake.style.animationDuration = (Math.random() * 4 + 6) + 's';
-      snowflake.style.opacity = Math.random() * 0.4 + 0.2;
-      document.body.appendChild(snowflake);
-      setTimeout(function() { snowflake.remove(); }, 10000);
-    }
     function createParticle() {
       var particle = document.createElement('div');
       particle.className = 'particle';
@@ -891,8 +877,6 @@
       document.body.appendChild(particle);
     }
     if (!window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
-      setInterval(createSnowflake, 400);
-      for (var i = 0; i < 10; i++) createSnowflake();
       for (var j = 0; j < 20; j++) createParticle();
     }
   </script>
