--- a/betaad.html
+++ b/betaad.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin | Super Pekárna</title>
-  <link rel="icon" type="image/webp" href__="sp.webp">
+  <link rel="icon" href__="sp.webp">
+  <link rel="apple-touch-icon" href__="sp.webp">
   <link rel="preconnect" href__="https://fonts.googleapis.com">
   <link rel="preconnect" href__="https://fonts.gstatic.com" crossorigin>
   <link href__="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;900&family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -665,7 +666,7 @@
     <span class="nav-logo">Super Pekárna</span>
     <div class="nav-center" id="navCenter">
       <div class="nav-links">
-        <a href__="index.html">Hlavní stránka</a>
+        <a href__="https://super-pekarna.vercel.app">Hlavní stránka</a>
         <a class="logout-link" id="logoutLink" onclick="logout()">Odhlásit se</a>
       </div>
     </div>
