--- a/beta.html
+++ b/beta.html
@@ -202,22 +202,22 @@
         rgba(250, 250, 250, 0.8) 30%, rgba(250, 250, 250, 0.5) 50%,
         rgba(250, 250, 250, 0.2) 70%, transparent 100%);
     }
-   .announcement {
+    .announcement {
       position: absolute;
       bottom: 60px;
-      left: 0;
-      right: 0;
+      left: 50%;
+      transform: translateX(-50%);
       background: rgba(10, 10, 10, 0.6);
       backdrop-filter: blur(20px);
-      border-radius: 0;
+      border-radius: 50px;
       padding: 14px 60px 14px 24px;
       z-index: 10;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3), inset 0 0 0 1px rgba(212, 163, 115, 0.3);
-      border-top: 1px solid rgba(212, 163, 115, 0.2);
-      border-bottom: 1px solid rgba(212, 163, 115, 0.2);
+      border: 1px solid rgba(212, 163, 115, 0.2);
+      max-width: 90%;
       color: white;
       font-weight: 500;
-      text-align: center;
+      animation: float 3s ease-in-out infinite;
     }
     .announcement.hidden { display: none; }
     .announcement-icon {
