--- a/beta.html
+++ b/beta.html
@@ -676,7 +676,7 @@
     <h2 class="section-title">Vznik</h2>
     <div class="story-content">
       <p class="story-text">
-        Všechno to začalo jednou tiktak krabičkou plnou zaschlýho těsta z mouky a vody, kterou <strong>Teodor Novák</strong> přinesl do školy. Druhý den už měl pořádnou mouku a vodu a tím to celý šílenství odstartovalo. Pak přišel <strong>Adam Haluza</strong>, který jednoho dne přinesl do školy jen tak pro srandu jedno vajíčko a mouku – z toho vznikl legendární M&M's chleba, první pořádný výtvor Super Pekárny. A protože to muselo mít i web, tak ho taky udělal on. K týmu se přidal i <strong>Marek Warchil</strong> jako další zakladatel, a tak vznikla Super Pekárna, jak ji znáte dnes.
+        test <strong>test</strong>
       </p>
     </div>
   </section>
