--- a/betaad.html
+++ b/betaad.html
@@ -727,7 +727,7 @@
   </footer>
   <script>
     lucide.createIcons();
-    var PASSWORD = "MojeHeslo123";
+    var PASSWORD = "StromecekJeMnam";
     function setTheme(theme) {
       if (theme === 'light') {
         document.body.classList.add('light-mode');
