--- a/test.html
+++ b/test.html
@@ -205,8 +205,8 @@
     .announcement {
       position: absolute;
       bottom: 60px;
-      left: 20px;
-      right: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       background: rgba(10, 10, 10, 0.6);
       backdrop-filter: blur(20px);
       border-radius: 50px;
@@ -214,10 +214,10 @@
       z-index: 10;
       box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3), inset 0 0 0 1px rgba(212, 163, 115, 0.3);
       border: 1px solid rgba(212, 163, 115, 0.2);
+      max-width: 90%;
       color: white;
       font-weight: 500;
       animation: float 3s ease-in-out infinite;
-      text-align: center;
     }
     .announcement.hidden { display: none; }
     .announcement-icon {
@@ -573,7 +573,7 @@
       font-weight: 600;
     }
     @keyframes fall { to { transform: translateY(100vh) rotate(360deg); } }
-    @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-10px); } }
+    @keyframes float { 0%, 100% { transform: translateX(-50%) translateY(0); } 50% { transform: translateX(-50%) translateY(-10px); } }
     @keyframes pulse-glow { 0%, 100% { filter: drop-shadow(0 0 20px rgba(212, 163, 115, 0.5)); } 50% { filter: drop-shadow(0 0 30px rgba(212, 163, 115, 0.8)); } }
     @keyframes rotate { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }
     @keyframes float-particle {
@@ -606,7 +606,7 @@
       section { padding: 60px 16px; }
       .contact-card { padding: 40px 24px; margin: 40px 16px 0; }
       .cta-button { padding: 16px 36px; font-size: 1rem; }
-      .announcement { padding: 12px 50px 12px 20px; font-size: 0.9rem; bottom: 40px; left: 16px; right: 16px; }
+      .announcement { padding: 12px 50px 12px 20px; font-size: 0.9rem; bottom: 40px; }
       .product-image { height: 200px; }
       .nav-menu { padding: 12px 16px; }
       .hero { height: 100svh; }
