--- a/test.html
+++ b/test.html
@@ -161,12 +161,17 @@
     }
     body.light-mode .mobile-menu-btn { color: var(--dark); }
     .hero {
-      position: relative;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: 100vw;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
+      z-index: 0;
     }
     .hero::before {
       content: '';
@@ -248,6 +253,12 @@
       opacity: 1;
       background: rgba(255, 255, 255, 0.2);
       transform: translateY(-50%) rotate(90deg);
+    }
+    .hero-spacer {
+      height: 100vh;
+      width: 100%;
+      position: relative;
+      z-index: 0;
     }
     section {
       padding: 100px 20px;
@@ -610,6 +621,7 @@
       .product-image { height: 200px; }
       .nav-menu { padding: 12px 16px; }
       .hero { height: 100svh; }
+      .hero-spacer { height: 100svh; }
       .hero-transition { height: 40vh; }
       .story-content { padding: 30px 24px; }
       .story-text { font-size: 1rem; }
@@ -661,6 +673,7 @@
       <strong>Novinka:</strong> Nový dizajn webu je tu!
     </div>
   </section>
+  <div class="hero-spacer"></div>
   <section id="ideas">
     <h2 class="section-title">Máš nápad?</h2>
     <div class="contact-card">
