--- a/test.html
+++ b/test.html
@@ -161,17 +161,20 @@
     }
     body.light-mode .mobile-menu-btn { color: var(--dark); }
     .hero {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+      position: relative;
       width: 100vw;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      z-index: 0;
+      max-width: none;
+      padding: 0;
+      margin: 0;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
     }
     .hero::before {
       content: '';
@@ -253,12 +256,6 @@
       opacity: 1;
       background: rgba(255, 255, 255, 0.2);
       transform: translateY(-50%) rotate(90deg);
-    }
-    .hero-spacer {
-      height: 100vh;
-      width: 100%;
-      position: relative;
-      z-index: 0;
     }
     section {
       padding: 100px 20px;
@@ -620,8 +617,13 @@
       .announcement { padding: 12px 50px 12px 20px; font-size: 0.9rem; bottom: 40px; }
       .product-image { height: 200px; }
       .nav-menu { padding: 12px 16px; }
-      .hero { height: 100svh; }
-      .hero-spacer { height: 100svh; }
+      .hero { 
+        height: 100svh;
+        left: 0;
+        right: 0;
+        margin-left: 0;
+        margin-right: 0;
+      }
       .hero-transition { height: 40vh; }
       .story-content { padding: 30px 24px; }
       .story-text { font-size: 1rem; }
@@ -673,7 +675,6 @@
       <strong>Novinka:</strong> Nový dizajn webu je tu!
     </div>
   </section>
-  <div class="hero-spacer"></div>
   <section id="ideas">
     <h2 class="section-title">Máš nápad?</h2>
     <div class="contact-card">
