--- a/beta.html
+++ b/beta.html
@@ -160,13 +160,21 @@
       padding: 8px;
     }
     body.light-mode .mobile-menu-btn { color: var(--dark); }
-     .hero {
+    .hero {
       position: relative;
+      width: 100vw;
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
+      max-width: none;
+      padding: 0;
+      margin: 0;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
     }
     .hero::before {
       content: '';
@@ -609,7 +617,13 @@
       .announcement { padding: 12px 50px 12px 20px; font-size: 0.9rem; bottom: 40px; }
       .product-image { height: 200px; }
       .nav-menu { padding: 12px 16px; }
-      .hero { height: 100svh; }
+      .hero { 
+        height: 100svh;
+        left: 0;
+        right: 0;
+        margin-left: 0;
+        margin-right: 0;
+      }
       .hero-transition { height: 40vh; }
       .story-content { padding: 30px 24px; }
       .story-text { font-size: 1rem; }
