--- a/beta.html
+++ b/beta.html
@@ -690,7 +690,7 @@
     <h2 class="section-title">Vznik</h2>
     <div class="story-content">
       <p class="story-text">
-        test <strong>test</strong>
+        Jednoho dne přinesl <strong>Teodor</strong> do školy ztvrdlé těsto v krabičce od TicTac. V následujících dneh donesl <strong>Adam</strong>  mouku, cukr a vajíčko, a vznikl náš první výtvor – <strong>M&M’s chléb</strong>. Nejsme však žádná sólovka, jsme tým: <strong>Marek</strong> vaří s námi, rozdělujeme si ingredience férově a právě on přišel s názvem naší <strong>„Super Pekárny“</strong>. Od té doby tvoříme jeden výtvor za druhým.
       </p>
     </div>
   </section>
