--- a/test.html
+++ b/test.html
@@ -668,3 +668,259 @@
   </style>
 </head>
 <body>
+  <div class="cyber-grid"></div>
+  <nav class="nav-menu">
+    <a href="#" class="nav-logo">Super Pekárna</a>
+    <div class="nav-center" id="navCenter">
+      <div class="nav-links">
+        <a onclick="scrollToSection('ideas'); closeMobileMenu();">Nápady</a>
+        <a onclick="scrollToSection('story'); closeMobileMenu();">Vznik</a>
+        <a onclick="scrollToSection('products'); closeMobileMenu();">Protokol</a>
+      </div>
+    </div>
+    <div class="nav-right">
+      <div class="nav-theme-toggle">
+        <button class="nav-theme-btn active" id="navDarkBtn" onclick="setTheme('dark')" aria-label="Tmavý režim">
+          <i data-lucide="moon" style="width: 18px; height: 18px;"></i>
+        </button>
+        <button class="nav-theme-btn" id="navLightBtn" onclick="setTheme('light')" aria-label="Světlý režim">
+          <i data-lucide="sun" style="width: 18px; height: 18px;"></i>
+        </button>
+      </div>
+      <button class="mobile-menu-btn" id="mobileMenuBtn" onclick="toggleMobileMenu()" aria-label="Menu">
+        <i data-lucide="menu" id="menuIcon" style="width: 24px; height: 24px;"></i>
+      </button>
+    </div>
+  </nav>
+  <section class="hero">
+    <div class="hero-transition"></div>
+    <div id="announcement" class="announcement">
+      <button class="close-btn" onclick="closeAnnouncement()" aria-label="Zavřít">
+        <i data-lucide="x" style="width: 18px; height: 18px;"></i>
+      </button>
+      <span class="announcement-icon">
+        <i data-lucide="sparkles" style="width: 16px; height: 16px;"></i>
+      </span>
+      <strong>Novinka:</strong> Nový dizajn webu je tu!
+    </div>
+  </section>
+  <section id="ideas">
+    <h2 class="section-title">Máš nápad?</h2>
+    <div class="contact-card">
+      <i data-lucide="lightbulb" class="contact-icon"></i>
+      <p class="contact-text">
+        Máš nápad na novou šmakoládu? Máš nápad na úpravu webu?<br>
+        Napiš nám kliknutím na tlačítko níže!
+      </p>
+      <button class="cta-button" onclick="openForm()">Přejít na formulář</button>
+    </div>
+  </section>
+  <section class="story-section" id="story">
+    <h2 class="section-title">Vznik</h2>
+    <div class="story-content">
+      <p class="story-text">
+        Jednoho dne přinesl <strong>Teodor</strong> do školy ztvrdlé těsto v krabičce od TicTac. V následujících dnech donesl <strong>Adam</strong> mouku, cukr a vajíčko, a vznikl náš první výtvor – <strong>M&M's chléb</strong>. Nejsme však žádná sólovka, jsme tým: <strong>Marek</strong> vaří s námi, rozdělujeme si ingredience férově a právě on přišel s názvem naší <strong>„Super Pekárny"</strong>. Od té doby tvoříme jeden výtvor za druhým.
+      </p>
+    </div>
+  </section>
+  <section id="products">
+    <h2 class="section-title">Náš Protokol</h2>
+    <div id="productList" class="products-grid"></div>
+  </section>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">Super Pekárna</div>
+      <p class="footer-text">© 2025 Super Pekárna – Vytvořeno s láskou a moukou Haluzákem</p>
+    </div>
+  </footer>
+  <script>
+    lucide.createIcons();
+    const defaultImage = 'neco_se_nepovedlo.png';
+    const products = [
+      {
+        name: "Rafaelo",
+        description: "",
+        image: "rafaelo.jpg",
+        rating: 5,
+        ingredients: "Mouka, Cukr, Kondenzované mléko, Strouhaný kokos, Mandle",
+        created: "2025-11-28"
+      },
+      {
+        name: "Perníčky",
+        description: "3. Pokus",
+        image: "",
+        rating: 5,
+        ingredients: "Mouka, Cukr, Vajíčka, Perníčkové koření, Kakao, Mléko, Kypřící prášek",
+        created: "2025-11-26"
+      },
+      {
+        name: "Muffiny",
+        description: "2. Pokus, ale obrázek je z 1. pokusu",
+        image: "muffiny.webp",
+        rating: 4,
+        ingredients: "Mouka, Cukr, Vajíčka, Čokoláda, Kakao",
+        created: "2025-11-10"
+      },
+      {
+        name: "Pusinky",
+        description: "",
+        image: "pusinky.webp",
+        rating: 3,
+        ingredients: "Bílek z vajíčka, Cukr",
+        created: "Neznámé"
+      },
+      {
+        name: "Jablečný koláč",
+        description: "",
+        image: "jablecny_kolac.webp",
+        rating: 3,
+        ingredients: "Mouka, Vajíčka, Cukr, Jablka a jiné ovoce",
+        created: "Neznámé"
+      },
+      {
+        name: "Tiramisu",
+        description: "2. Pokus",
+        image: "",
+        rating: 2,
+        ingredients: "Mléko, Tvaroh, Piškoty, Kakao",
+        created: "Neznámé"
+      },
+      {
+        name: "Švestkový koláč",
+        description: "",
+        image: "svestkovy_kolac.webp",
+        rating: 3,
+        ingredients: "Mouka, Vajíčka, Cukr, Švestky a jiné ovoce",
+        created: "Neznámé"
+      },
+      {
+        name: "M&M's Chléb",
+        description: "",
+        image: "mams_chleb.webp",
+        rating: 0,
+        ingredients: "Mouka, Vajíčka, Cukr, Bonbóny M&M's",
+        created: "Neznámé"
+      }
+    ];
+    function scrollToSection(sectionId) {
+      const element = document.getElementById(sectionId);
+      if (element) {
+        element.scrollIntoView({ behavior: 'smooth' });
+      }
+    }
+    function openForm() {
+      window.open('https://docs.google.com/forms/d/e/1FAIpQLScbPsW00LGvBiAQKL9O_VjiR15jby58UTqIkpDt3sW4rNRbtA/viewform?usp=sharing&ouid=101182095751355125326', '_blank');
+    }
+    function setTheme(theme) {
+      if (theme === 'light') {
+        document.body.classList.add('light-mode');
+        document.getElementById('navLightBtn').classList.add('active');
+        document.getElementById('navDarkBtn').classList.remove('active');
+        localStorage.setItem('theme', 'light');
+      } else {
+        document.body.classList.remove('light-mode');
+        document.getElementById('navDarkBtn').classList.add('active');
+        document.getElementById('navLightBtn').classList.remove('active');
+        localStorage.setItem('theme', 'dark');
+      }
+    }
+    function toggleMobileMenu() {
+      const navCenter = document.getElementById('navCenter');
+      const menuIcon = document.getElementById('menuIcon');
+      const isActive = navCenter.classList.toggle('active');
+      if (isActive) {
+        menuIcon.setAttribute('data-lucide', 'x');
+      } else {
+        menuIcon.setAttribute('data-lucide', 'menu');
+      }
+      lucide.createIcons();
+    }
+    function closeMobileMenu() {
+      const navCenter = document.getElementById('navCenter');
+      const menuIcon = document.getElementById('menuIcon');
+      navCenter.classList.remove('active');
+      menuIcon.setAttribute('data-lucide', 'menu');
+      lucide.createIcons();
+    }
+    function closeAnnouncement() {
+      document.getElementById('announcement').classList.add('hidden');
+    }
+    const savedTheme = localStorage.getItem('theme') || 'dark';
+    if (savedTheme === 'light') {
+      setTheme('light');
+    }
+    function loadProducts() {
+      const list = document.getElementById("productList");
+      if (!products || products.length === 0) {
+        list.innerHTML = '<div style="grid-column: 1/-1; text-align: center; padding: 60px; color: rgba(255,255,255,0.6);">Zatím zde není žádné pečivo</div>';
+        return;
+      }
+      const sortedProducts = [...products].sort((a, b) => {
+        if (a.created === "Neznámé") return 1;
+        if (b.created === "Neznámé") return -1;
+        return new Date(b.created) - new Date(a.created);
+      });
+      sortedProducts.forEach(p => {
+        const card = document.createElement('div');
+        card.className = 'product-card';
+        const imgSrc = p.image || defaultImage;
+        const dateText = p.created === "Neznámé" || !p.created || isNaN(new Date(p.created).getTime())
+          ? "Neznámé"
+          : new Date(p.created).toLocaleDateString("cs-CZ", { day: 'numeric', month: 'long', year: 'numeric' });
+        let starsHtml = '';
+        for (let i = 0; i < 5; i++) {
+          starsHtml += '<i data-lucide="star" class="star ' + (i < p.rating ? 'filled' : '') + '"></i>';
+        }
+        card.innerHTML =
+          '<div class="product-image">' +
+            '<img src="' + imgSrc + '" alt="' + p.name + '" loading="lazy">' +
+            (p.rating === 5 ? '<div class="product-badge"><i data-lucide="trophy"></i> Top</div>' : '') +
+          '</div>' +
+          '<div class="product-content">' +
+            '<h3 class="product-name">' + p.name + '</h3>' +
+            '<p class="product-description">' + p.description + '</p>' +
+            '<div class="product-rating">' + starsHtml + '</div>' +
+            '<div class="product-ingredients">' +
+              '<strong>Ingredience</strong>' +
+              p.ingredients +
+            '</div>' +
+            '<div class="product-date">' +
+              '<i data-lucide="calendar"></i>' +
+              'Přidáno ' + dateText +
+            '</div>' +
+          '</div>';
+        list.appendChild(card);
+      });
+      lucide.createIcons();
+    }
+    loadProducts();
+    function createConfetti() {
+      const confetti = document.createElement('div');
+      confetti.className = 'confetti';
+      const colors = ['#ff6b6b', '#4ecdc4', '#45b7d1', '#f9ca24', '#6c5ce7', '#a29bfe', '#fd79a8', '#fdcb6e', '#e17055', '#00b894'];
+      const shapes = ['◆', '●', '■', '▲', '★'];
+      confetti.textContent = shapes[Math.floor(Math.random() * shapes.length)];
+      confetti.style.color = colors[Math.floor(Math.random() * colors.length)];
+      confetti.style.left = Math.random() * 100 + '%';
+      confetti.style.fontSize = (Math.random() * 1 + 0.5) + 'rem';
+      confetti.style.animationDuration = (Math.random() * 3 + 3) + 's';
+      confetti.style.opacity = Math.random() * 0.6 + 0.4;
+      document.body.appendChild(confetti);
+      setTimeout(function() { confetti.remove(); }, 6000);
+    }
+    function createParticle() {
+      const particle = document.createElement('div');
+      particle.className = 'particle';
+      particle.style.left = Math.random() * 100 + '%';
+      particle.style.top = Math.random() * 100 + '%';
+      particle.style.animationDelay = Math.random() * 5 + 's';
+      document.body.appendChild(particle);
+    }
+    if (!window.matchMedia('(prefers-reduced-motion: reduce)').matches) {
+      setInterval(createConfetti, 300);
+      for (var i = 0; i < 15; i++) createConfetti();
+      for (var j = 0; j < 20; j++) createParticle();
+    }
+  </script>
+</body>
+</html>
